--- a/views/room.ejs
+++ b/views/room.ejs
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Novelin Zoom</title>
     <script>
         const ROOM_ID = "<%= roomId %>"
     </script>
-    <script defer src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+    <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
     <script src="/socket.io/socket.io.js" defer></script>
     <script src="script.js" defer></script>
     <style>
+        body {
+            margin: 0px;
+        }
+
         #video-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, 400px);
@@ -26,5 +30,16 @@
 </head>
 <body>
     <div id="video-grid"></div>
+
+    <div style="padding: 24px;">
+        <h1>Hai! 😀</h1>
+        <p>Terima kasih sudah berkunjung.</p>
+        <p>Coba aplikasi ini dengan temanmu yuk, caranya salin link berikut ini dan kirim ke temanmu.</p>
+        <p id="room_link" style="font-size: 1.5em;"></p>
+    </div>
+    
+    <script>
+        document.getElementById("room_link").innerHTML = location
+    </script>
 </body>
 </html>
