--- a/views/room.ejs
+++ b/views/room.ejs
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novelin Zoom</title>
     <script>
-        const ROOM_ID = "<%= roomId %>"
+        const ROOM_ID = "<%= roomId %>";
+        const PORT_BARU = "<%= portBaru %>"; // baru
     </script>
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
     <script src="/socket.io/socket.io.js" defer></script>
@@ -37,7 +38,7 @@
         <p>Terima kasih sudah berkunjung.</p>
         <p>Coba aplikasi ini dengan temanmu yuk, caranya salin link berikut ini dan kirim ke temanmu.</p>
         <p id="room_link" style="font-size: 1.2em;"></p>
-        <p><small>v12</small></p>
+        <p><small>Build 2020/10/17</small></p>
     </div>
     
     <script>
