Revert "add peerServer configuration"
This reverts commit b1e2e9a0e71f7b4e58a90d6757e09518d9087696.

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novelin Zoom</title>
     <script>
-        const ROOM_ID = "<%= roomId %>";
-        const PORT_BARU = "<%= portBaru %>"; // baru
+        const ROOM_ID = "<%= roomId %>"
     </script>
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
     <script src="/socket.io/socket.io.js" defer></script>
@@ -38,7 +37,7 @@
         <p>Terima kasih sudah berkunjung.</p>
         <p>Coba aplikasi ini dengan temanmu yuk, caranya salin link berikut ini dan kirim ke temanmu.</p>
         <p id="room_link" style="font-size: 1.2em;"></p>
-        <p><small>Build 2020/10/17</small></p>
+        <p><small>v12</small></p>
     </div>
     
     <script>
