--- a/views/room.ejs
+++ b/views/room.ejs
@@ -25,7 +25,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            background-color: #ddd;
+            background-color: #bdc3c7;
         }
     </style>
 </head>
