--- a/views/room.ejs
+++ b/views/room.ejs
@@ -37,7 +37,7 @@
         <p>Terima kasih sudah berkunjung.</p>
         <p>Coba aplikasi ini dengan temanmu yuk, caranya salin link berikut ini dan kirim ke temanmu.</p>
         <p id="room_link" style="font-size: 1.2em;"></p>
-        <p><small>v12</small></p>
+        <p><small>Build 2020.10.23</small></p>
     </div>
     
     <script>
